# fin

./: .env.example  .gitignore  BACKLOG.md  Dockerfile  LICENSE  README.md  buglist.txt  docker-compose.yml  example-task.cmd  pyproject.toml  restart.ps1
.claude/: settings.local.json
docs/: SIMPLEFIN_SETUP.md  accuracy.md  truth_engine_migration.md
specs/: business_analyst.md  dashboard_v3_concept.md  financial_audit_spec.md  financial_expert.md  product_manager.md  project_summary.md  ui_designer_review.md  v3_mockup.html
src/fin/: analysis.py  audit.py  cache.py  categorize.py  classifier.py  classify.py  cli.py  close_books.py  config.py  credentials.py  csv_import.py  dates.py  db.py  demo.py  integrity.py  legacy_analysis.py  legacy_classify.py  log.py  models.py  money.py  normalize.py  planner.py  projections.py  reconciliation.py  refund_matching.py  report_service.py  reporting.py  reporting_models.py  security.py  simplefin_client.py  status_commands.py  tls.py  transfer_pairing.py  versioning.py  view_models.py  web.py
src/fin/static/css/: fin_drilldown.css
src/fin/static/js/: fin_api.js  fin_drilldown.js  fin_ui.js
src/fin/templates/: audit.html  base.html  budget.html  commitments.html  connect.html  dashboard.html  dashboard_v2.html  insights.html  license.html  plan.html  review.html  subs.html  sync-log.html
tests/: __init__.py  conftest.py  test_analysis.py  test_audit.py  test_backup_export.py  test_classifier.py  test_cli_integration.py  test_cli_security.py  test_commitments.py  test_credentials.py  test_csv_import.py  test_dashboard_metrics.py  test_dates.py  test_duplicate_detection.py  test_insights_route.py  test_known_subscriptions.py  test_money.py  test_no_legacy_engine.py  test_period_selection.py  test_reconciliation.py  test_refund_matching.py  test_reporting.py  test_security.py  test_simplefin_setup.py  test_sketchy_detection.py  test_transfer_pairing.py  test_txn_type_overrides.py  test_web_functional.py  test_web_security.py
