[project]
name = "finproj"
version = "0.1.0"
description = "Local-first finance MVP (SimpleFin + subscriptions/anomalies)"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "uvicorn",
  "typer>=0.12.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "python-dateutil>=2.9.0",
  "python-dotenv>=1.0.0",
  "rich>=13.7.0",
  "tenacity>=8.2.0",
  "filelock>=3.13.0",
  "jinja2>=3.1.0",
  "numpy>=1.24.0",
  "keyring>=25.0.0",
]

[project.optional-dependencies]
ml = [
  "sentence-transformers>=2.2.0",
  "torch>=2.0.0",
]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=4.1.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.27.0",
]

[project.scripts]
fin = "fin.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/fin"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
]