[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fin"]

[project]
name = "getfin"
version = "1.0.0"
description = "Local-first personal finance — sync with your bank, detect subscriptions, track spending. All data stays on your machine."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
authors = [{name = "Arclight Engineering", email = "hello@arclighteng.com"}]
urls = {Homepage = "https://github.com/arclighteng/fin", Documentation = "https://github.com/arclighteng/fin#readme"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Topic :: Office/Business :: Financial",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "fastapi",
  "uvicorn",
  "typer>=0.12.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "python-dateutil>=2.9.0",
  "python-dotenv>=1.0.0",
  "rich>=13.7.0",
  "tenacity>=8.2.0",
  "filelock>=3.13.0",
  "jinja2>=3.1.0",
  "numpy>=1.24.0",
  "keyring>=25.0.0",
  "tzdata>=2024.1",  # Required on Windows for zoneinfo timezone support
  "slowapi>=0.1.9",  # Rate limiting (Item 4)
  "python-multipart>=0.0.9",  # Required by FastAPI for file uploads
]

[project.optional-dependencies]
ml = [
  "sentence-transformers>=2.2.0",
  "torch>=2.0.0",
]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=4.1.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.27.0",
]

[project.scripts]
fin = "fin.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/fin"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
]